# git-shell-enforce-directory

./: Cargo.toml  LICENSE  README.md
src/: main.rs
